--- a/src/components/ItemNameAndPrice/item-name-and-price.sass
+++ b/src/components/ItemNameAndPrice/item-name-and-price.sass
@@ -10,6 +10,7 @@
 
 .item-name
     color: $black
+    width: max-content
 
     +small-phone
         font-size: 12px
