--- a/src/sass/buttons.sass
+++ b/src/sass/buttons.sass
@@ -83,5 +83,6 @@
 .button-submit
     margin-top: 32px
     
-
+.button-checkout
+    margin-top: 24px
     
